--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,35 +1,29 @@
 body {
-    font-family: helvetica
-}
-
-table.frame {
-    width: 500px;
-    max-height: 400px;
-    border-radius: 5px;
-    background: cornflowerblue;
-}
-
-td#header {
     width: 100%;
-    height: 20%;
-    border-radius: 5px;
-    background: #E74C3C;
-    text-align: center;
+    font-family: helvetica;
 }
 
-input.ui-option {
-    font-size: 15px;
-    text-align: left;
-    color: black;
+nav {
+    width: 950px;
+    height: 100px;
+    border-style: solid;
+    border-width: 1px 1px 1px 1px;
+    border-color: chocolate;
 }
 
-b#title {
-    font-size: 35px;
-    color: white;
+#epicenter-plot {
+    width: 550px;
+    height: 740px;
+    float: left;
+    border-style: solid;
+    border-width: 0px 1px 0px 0px;
+    border-color: crimson;
 }
 
-p {
-    font-size: 12pt
+#yearly-statistics {
+    width: 400px;
+    height: 300px;
+    float: left;
 }
 
 svg {
