[earthquakeMap] slider 추가와 tooltip 함수 변경

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,11 +5,19 @@ body {
 
 nav {
     width: 950px;
-    height: 100px;
+    height: 200px;
     border-style: solid;
     border-width: 1px 1px 1px 1px;
     border-color: chocolate;
     margin-bottom: 10px;
+}
+
+#year-slider {
+    width: 700px;
+}
+
+#magnitude-slider {
+    width: 500px;
 }
 
 tr,
