--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,12 +28,14 @@ td {
 }
 
 #epicenter-plot {
-    width: 550px;
-    height: 740px;
     float: left;
     /*border-style: solid;
     border-width: 0px 1px 0px 0px;
     border-color: crimson;*/
+    background-image: url("../../data/korean_map-555x800.gif");
+    background-repeat: no-repeat;
+    background-position: right top;
+    /*background-attachment: fixed;*/
 }
 
 #yearly-statistics {
