--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,13 @@
 body {
     width: 100%;
     font-family: helvetica;
+    background-color: #FFFFF0;
+}
+
+p#main-title {
+    /*font-family: Georgia, 'Times New Roman', Times, serif;*/
+    font-size: 36px;
+    text-align: center;
 }
 
 
@@ -21,11 +28,42 @@ body {
     width: 700px;
 }
 
+table#main-interface {
+    border-collapse: separate;
+    border-spacing: 10px 10px;
+}
+
 tr,
 td {
-    border-style: solid;
+    /*border-style: solid;
     border-width: 1px 1px 1px 1px;
-    border-color: crimson;
+    border-color: slateblue;*/
+    border-width: 2px;
+    /*border-radius: 6px;*/
+}
+
+p.chart-title {
+    /*font-family: Georgia, 'Times New Roman', Times, serif;*/
+    font-size: 24px;
+    text-align: center;
+    float: top;
+}
+
+p#epicenter-map-title {
+    max-height: 25px;
+}
+
+td.chart-background {
+    background-color: #f2f0f7;
+}
+
+div.chart {
+    margin: 0px 10px 10px 10px;
+    background: linear-gradient(to bottom right, white, #F0FFF0);
+}
+
+div#epicenter-plot {
+    background-color: white;
 }
 
 #epicenter-plot {
