fix bug at brush clear; modified layout addressing the comments

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,8 +29,8 @@ p#main-title {
 }
 
 table#main-interface {
-    border-collapse: separate;
-    border-spacing: 10px 10px;
+    /*border-collapse: separate;
+    border-spacing: 10px 10px;*/
 }
 
 tr,
